force-app/main/default/objects/ampi__Project_Indicator_Thematic_Area__c/ampi__Project_Indicator_Thematic_Area__c.object-meta.xml
<CustomObject>
    <description>Mechanism to tag a project indicator with a theme</description>
    <label>Project Indicator Thematic Area</label>
    <nameField>
        <displayFormat>PITA-{0000}</displayFormat>
        <label>Project Indicator Thematic Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Indicator Thematic Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>