force-app/main/default/objects/ampi__Project_Indicator_Thematic_Area__c/fields/ampi__Thematic_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent thematic area</description>
    <label>Thematic Area</label>
    <referenceTo>ampi__Thematic_Area__c</referenceTo>
    <relationshipLabel>Project Indicator Thematic Areas</relationshipLabel>
    <relationshipName>Project_Indicator_Thematic_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>