force-app/main/default/objects/ampi__Project_Indicator_Thematic_Area__c/fields/ampi__Thematic_Area_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Icon__c</fullName>
    <description>This formula field copies the thematic area icon from parent thematic area</description>
    <formula>ampi__Thematic_Area__r.ampi__Icon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thematic Area Icon</label>
    <type>Text</type>
</CustomField>