force-app/main/default/objects/ampi__Project_Indicator_Thematic_Area__c/fields/ampi__Thematic_Area_Icon_and_Text__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Icon_and_Text__c</fullName>
    <description>[Candidate for Deprecation] This formula field copies the thematic area icon and text from parent thematic area</description>
    <formula>ampi__Thematic_Area__r.ampi__Icon__c + &apos;#&apos; + ampi__Thematic_Area__r.ampi__Name_Translated__c</formula>
    <label>Thematic Area Icon and Text</label>
    <type>Text</type>
</CustomField>